--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -36,17 +36,23 @@
                         <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Price</a>
                         </li> -->
-                        <li class="nav-item">
+                        {{!-- <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
-                        </li>
+                        </li> --}}
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="register">Signin</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="logout">Logout</a>
                         </li>
 
 
